--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,41 @@
   font-family: Consolas;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-}
-
 .background-gradient {
   display: flex;
   position: absolute;
-  max-width: 100%;
-  height: auto;
+  width: 100vw;
+  height: 100vh;
+}
+
+.landscape-mode {
+  position: absolute;
+  z-index: 99;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+}
+.landscape-mode-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 10px;
+  border-radius: 5px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (min-width: 600px) {
+  .landscape-mode {
+    display: none;
+  }
 }
